--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
           <h1 class="sep_line"></h1>
           <div class="row" style="border:dashed 3px #9e9d9d;">
             <div class="col-md-12 text-center" style="width: 100%;height:100px;">
-              <p>
-                Your Secure Password
-              </p>
+              <input type="text" value="Your Secure Password" id="show-password" style="width: 100%;height:100px;">
             </div>
           </div>
         </div>
@@ -34,11 +32,14 @@
       </div>
       <div class="row" style="border-top: 2px solid #9e9d9d; margin-top: 1%;">
         <div class="col-md-6">
-            <a href="#" class="btn btn-danger btn-lg active rounded-pill" style="margin-top:2%; margin-right:auto;width: 70%;" role="button" aria-pressed="true">Primary link</a>
+            <a id="generate" class="btn btn-danger btn-lg active rounded-pill" style="margin-top:2%; margin-right:auto;width: 70%;" role="button" aria-pressed="true">Generate Password</a>
         </div>
         <div class="col-md-6">
-            <a href="#" class="btn btn-secondary btn-lg active rounded-pill" style="margin-top:2%; float:right;width: 70%;" role="button" aria-pressed="true">Primary link</a>
+            <a id="copy" class="btn btn-secondary btn-lg active rounded-pill" style="margin-top:2%; float:right;width: 70%;" role="button" aria-pressed="true">Copy to Clipboard</a>
         </div>
+      </div>
+      <div>
+        <h3 id='status'></h3>
       </div>
     </div>
   
@@ -70,6 +71,49 @@
         lowerC=confirm("Do you want to include lowercase character?");
         upperC=confirm("Do you want to include uppercase character?");
     }
+    var statusEl=document.querySelector('#status');
+    var generateBtn=document.querySelector('#generate');
+    var copyBtn=document.querySelector('#copy');
+    var passwordEl=document.querySelector('#show-password')
+
+    statusEl.innerHTML="Special Character: "+String(specialC)+ "<br>"+
+                       "Numeric Character: "+String(numericC)+"<br>"+
+                       "Lowercase Character: "+ String(lowerC)+"<br>"+
+                       "Uppercase Character: " + String(upperC);
+
+    charset='';
+    if(specialC){
+        charset=charset+'!#$%&()*+,-./:;<=>?@[]^_`{|}~';
+    }
+    if(numericC){
+        charset=charset+'0123456789';
+    }
+    if(lowerC){
+        charset=charset+'abcdefghijklmnopqrstuvwxyz';
+    }
+    if(upperC){
+        charset=charset+'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
+    }
+
+    function generatePassword(){
+    retVal = '';
+
+        for (var i = 0, n = charset.length; i < len; ++i) {
+            retVal += charset.charAt(Math.floor(Math.random() * n));
+    }
+        passwordEl.textContent=retVal;
+    }
+    
+    function copyPassword(){
+      var a=document.getElementById('password-show');
+      a.select();
+      document.execCommand("copy");
+      alert("Password copied to clipboard.");
+    }
+    generateBtn.addEventListener("click",generatePassword);
+    copyBtn.addEventListener("click",copyPassword);
+
+
 
 
   </script>
